makes currency converter

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,5 @@
-@import './common';
-@import './example';
+@import './base/base';
+@import './base/vars';
+
+@import './components/header';
+@import './components/converter';
