--- a/src/sass/components/_converter.scss
+++ b/src/sass/components/_converter.scss
@@ -1,6 +1,42 @@
 section {
   padding: 15px;
 }
+
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+
+.converter__item {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 25px;
+
+  flex-direction: row;
+
+  & div {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    width: 300px;
+  }
+}
+
 .title {
   font-size: 30px;
   margin-bottom: 20px;
