--- a/src/sass/components/_converter.scss
+++ b/src/sass/components/_converter.scss
@@ -4,7 +4,10 @@ section {
 
 .container {
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 15px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.24), 0px 6px 6px rgba(0, 0, 0, 0.12),
+    2px 6px 8px rgba(0, 0, 0, 0.32);
 
   @media screen and (min-width: 480px) {
     width: 480px;
